<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_dialog_call"
        android:showAsAction="always"
        android:title="Call" />
    <item
        android:id="@+id/action_security"
        android:icon="?attr/icon_not_secure"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/action_secure"/>
    <item
        android:id="@+id/action_attach_file"
        android:icon="?attr/icon_new_attachment"
        android:orderInCategory="30"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/attach_file"/>
    <item
        android:id="@+id/action_contact_details"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="Detalhes do contato"/>
    <item
        android:id="@+id/action_muc_details"
        android:icon="?attr/icon_group"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:title="@string/action_muc_details"/>
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="45"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/invite_contact"/>
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="Limpar histórico"/>
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="60"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/action_end_conversation"/>
    <item
        android:id="@+id/action_mute"
        android:orderInCategory="70"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/disable_notifications"/>

    <item
        android:id="@+id/action_unmute"
        android:orderInCategory="71"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/enable_notifications"/>

    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_accounts"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/action_settings"/>

</menu>