<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#7225C3"
    android:orientation="vertical" >
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/feedback_important"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <Spinner 
        android:id="@+id/feedback_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:prompt="@string/select_feedback_type"
        android:layout_marginTop="10dp"/>
    <EditText 
        android:id="@+id/feedback_value"
        android:layout_height="150dp"
        android:layout_width="match_parent"
          android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
         android:background="@drawable/edittextbg"
         android:gravity="top" 
         android:inputType="textMultiLine"
         android:textColor="#000"
        android:layout_marginTop="20dp"/>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
    <CheckBox 
        android:id="@+id/check_phone_info"
        android:layout_height="wrap_content"       
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
          android:layout_marginLeft="20dp"
  />
    <TextView 
        android:id="@+id/txt_phone_info"
        android:layout_height="wrap_content"       
        android:layout_width="wrap_content"
              android:text="@string/mobile_info"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="20dp"
              android:textColor="#fff"/>
</LinearLayout>
    <Button 
        android:id="@+id/submit_feedback"
        android:layout_height="50dp"
        android:layout_width="match_parent"
           android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>
